ditching large summary files; pushing edits back to Mazu to try knitting there (pandoc errors on laptop)

--- a/ms_1_intro.Rmd
+++ b/ms_1_intro.Rmd
@@ -8,11 +8,11 @@ Knowing where species exist and thrive is fundamental to the sciences of ecology
 
 A broad literature exists on methods and results for predicting individual species distributions, but relatively few have been applied to broad suites of taxa globally, particularly in marine contexts.  The two most comprehensive, widely-used global-scale repositories that predict marine species ranges throughout the world's oceans are AquaMaps, which rely primarily on model predictions to communicate the distribution of a species based on habitat suitability [@kaschner_aquamaps:_2015], and range data from the International Union for Conservation of Nature (IUCN), which rely primarily on expert opinion to communicate range size as a criterion for extinction risk assessments [@iucn_iucn_2015]. 
 
-While the two datasets ostensibly describe the same information, i.e., where can a particular species be found, they communicate fundamentally distinct concepts.  The IUCN range map for a given species describes the "extent of occurrence" for that species, a contiguous region that encloses all known occurrences and connecting regions, with the explicit caveat that this "does not mean that [the species] is distributed equally within that polygon or occurs everywhere within that polygon" [@iucn_iucn_2015].  The AquaMaps map for a species, on the other hand, excludes unsuitable habitats and thus seems to better be defined as "area of occupancy": the subset of the extent of occurrence in which the species is actually likely to be found [@kaschner_aquamaps:_2015].  
+While the two datasets ostensibly describe the same information, i.e., where can a particular species be found, they communicate the information in very different ways.  The IUCN range map for a given species describes the "extent of occurrence" for that species, an undifferentiated contiguous region that encloses all known occurrences and connecting regions, with the explicit caveat that this "does not mean that [the species] is distributed equally within that polygon or occurs everywhere within that polygon" [@iucn_iucn_2015].  The AquaMaps map for a species, on the other hand, provides a more nuanced understanding of species distribution by communicating the “probability of occurrence” of a species throughout its predicted range [1].  By considering any non-zero probability of occurrence, we can effectively consider AquaMaps as an extent of occurrence, though bounded by modeled environmental conditions rather than by expert opinion [@kaschner_aquamaps:_2015].  
 
 <!--The distinctions between extent of occurrence and area of occupancy, including methodology, limitations, and intended purpose, are well documented [@rondinini_tradeoffs_2006; @gaston_sizes_2009]. ___include table for more details?___ -->
 
-The fundamental differences between the datasets suggest that the choice of one over the other should be carefully matched to the purpose for which it is to be used [@gaston_sizes_2009], and yet these datasets have been used in hundreds of studies and applications for a wide range of purposes, typically without directly addressing the limitations of the chosen dataset or comparing outcomes between the two.  Example uses of the data include assessing marine species status [@halpern_index_2012; @halpern_patterns_2015; @selig_assessing_2013], evaluating global biodiversity patterns [@coll_biodiversity_2010; @martin_manual_2014; @pimm_biodiversity_2014; @kaschner_current_2011], predicting species range shifts [@garciamolinos_climate_2015], and setting conservation priorities [@klein_shortfalls_2015].
+The fundamental differences between the datasets suggest that the choice of one over the other (and for AquaMaps, consideration of a presence threshold) should be carefully matched to the purpose for which it is to be used [@gaston_sizes_2009], and yet these datasets have been used in many studies and applications for a wide range of purposes, typically without directly addressing the limitations of the chosen dataset or comparing outcomes between the two.  Example uses of the data include assessing marine species status [@halpern_index_2012; @halpern_patterns_2015; @selig_assessing_2013], evaluating global biodiversity patterns [@coll_biodiversity_2010; @martin_manual_2014; @pimm_biodiversity_2014; @kaschner_current_2011], predicting species range shifts [@garciamolinos_climate_2015], and setting conservation priorities [@klein_shortfalls_2015].
 
 We recognize that each dataset provides distinct value for conservation research, and so here we focus not on how the two datasets should ideally be used, but instead, on hidden assumptions and sources of error within each dataset.  Importantly, we test the implications of choosing one over the other, and use overlapping species mapped within both datasets to better understand the causes of differences in results from using one or the other.  We also repeat a recent analysis of gaps in protection afforded by marine protected areas (MPAs) to examine the implications of these differences for global conservation and management priorities.  Because these datasets are so widely used, it is crucial to understand and acknowledge, and where possible address, data limitations.
 
