--- a/ms_2_methods.Rmd
+++ b/ms_2_methods.Rmd
@@ -13,7 +13,7 @@ __Comparison of taxonomic and regional distribution__:
 To examine the overall taxonomic distribution across the spatial datasets, we grouped species by taxonomic class and data source, and determined the proportion of each class represented in each dataset.  To compare the spatial representation of the two datasets directly, we rasterized the IUCN species polygons to the same 0.5° grid as the AquaMaps species maps (Fig S2).  We determined species presence within a grid cell as any non-zero overlap of a species polygon with the cell (Fig S1C).  For the AquaMaps dataset, we determined per-cell species count by including all species with non-zero probability of occurrence to best approximate the "extent of occurrence" generally indicated by IUCN maps (Fig S1D).
 
 __Comparison of paired maps__:
-Although relatively small in number, overlap species present a unique opportunity to evaluate the two datasets overall.  For the species included in both datasets, we examine how well the maps align in both spatial distribution and overall area.  Based upon the definitions of extent of occurrence and area of occupancy, we expect that for a given species, the AquaMaps predicted distribution will fall within, and describe a smaller range than, the IUCN predicted distribution.  Where these expectations seem to fail, we explore methodological issues that can introduce errors.
+Although relatively small in number, overlap species present a unique opportunity to evaluate the two datasets overall.  For the species included in both datasets, we examine how well the maps align in both spatial distribution and overall area. If each dataset is communicating its own prediction of extent of occurrence, we expect that for a given species, the two predicted distributions will largely overlap, with similar total range sizes.  Where these expectations seem to fail, we explore methodological issues that can introduce errors.
 
 We identified "paired map" species using genus and species binomials as a matching key.  We used the taxize package [@scott_chamberlain_taxize_2013] in R [@r_core_team_r:_2016] to standardize species names and synonyms; for species with separate subpopulation maps in IUCN, we combined all subpopulations to create a single global population.   For each of these paired map species, we determined species presence within each spatial cell for each dataset using the same criteria outlined above.
 
@@ -31,8 +31,8 @@ Given the wide variation in the alignment of predicted range for the paired map 
 For AquaMaps data, whose reliance upon FAO Major Fishing Areas [@fao_fisheries_and_aquaculture_department_cwp_2015] to constrain species ranges seems likely to result in abrupt discontinuities in species range where ecologically suitable habitat intersects with human-defined borders, we identified FAO boundaries where such discontinuities are likely to occur.  Cropping species distributions to narrow latitudinal bands, we determined species whose eastern or western range limit coincided exactly with a defined FAO boundary.  As an illustrative example, we cropped AquaMaps range maps for all Pacific and Indian Ocean species to a band between between 25° S and 20° N latitudes, then identified all species whose eastern range limit within this band coincided with 175° W longitude, the vertical boundary between two prominent FAO regions.
 
 ## Methods for MPA Gap Analysis case study
-To assess the effectiveness of MPAs in protecting biodiversity, Klein et al. [-@klein_shortfalls_2015] compared the coverage of the global MPA network presented by the World Database on Protected Areas (WDPA) [@iucn_world_2014] to the species ranges described in the 2014 AquaMaps dataset [@kaschner_aquamaps:_2015].  For the primary analysis, the researchers defined species presence as 50% or greater probability of occurrence.
+To assess the effectiveness of MPAs in protecting biodiversity, Klein et al. [-@klein_shortfalls_2015] compared the coverage of the global MPA network presented by the World Database on Protected Areas (WDPA) [@iucn_world_2014] to the species ranges described in the AquaMaps dataset, version 08/2013 [@kaschner_aquamaps:_2013].  For the primary analysis, the researchers defined species presence as 50% or greater probability of occurrence.
 
-To reconstruct the primary analysis, we selected the subset of protected areas from the 2014 WDPA dataset classified as IUCN protected area management categories I-IV and spatially overlapping a marine area. The WDPA polygons and marine polygons were rasterized to 0.01° and then aggregated to AquaMaps native 0.5° cells, to calculate proportion of marine protected area within each cell.  After verifying our method using the 2014 AquaMaps dataset, we updated the analysis to use the 2015 AquaMaps dataset, at a presence threshold of 50% (to compare to Klein et al. directly) and 0% (to better compare with IUCN spatial data).  To analyze MPA coverage against IUCN spatial data, we extracted IUCN polygon weights per 0.5° cell for each species and compared against the protected area raster.
+To reconstruct the primary analysis, we selected the subset of protected areas from the 2014 WDPA dataset classified as IUCN protected area management categories I-IV and spatially overlapping a marine area. The WDPA polygons and marine polygons were rasterized to 0.01° and then aggregated to AquaMaps native 0.5° cells, to calculate proportion of marine protected area within each cell.  After verifying our method using the 08/2013 AquaMaps dataset, we updated the analysis to use the 2015 AquaMaps dataset [@kaschner_aquamaps:_2015], at a presence threshold of 50% (to compare to Klein et al. directly) and 0% (to better compare with IUCN spatial data).  To analyze MPA coverage against IUCN spatial data, we extracted IUCN polygon weights per 0.5° cell for each species and compared against the protected area raster.
 
 All processing was completed using R statistical software [@r_core_team_r:_2016], and all code and intermediate data are available on GitHub at https://github.com/OHI-Science/IUCN-AquaMaps.
